--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.4",
     "framer-motion": "^12.23.6",
     "gsap": "^3.13.0",
+    "hls.js": "^1.6.7",
     "lucide-react": "^0.503.0",
     "ogl": "^1.0.11",
     "react": "^18.3.1",
