--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "@mui/material": "^7.2.0",
     "@react-three/drei": "^9.74.1",
     "@react-three/fiber": "^8.13.3",
+    "@studio-freight/lenis": "^1.0.42",
+    "aos": "^2.3.4",
     "axios": "^1.7.4",
     "framer-motion": "^12.23.6",
     "gsap": "^3.13.0",
@@ -25,6 +27,7 @@
     "ogl": "^1.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5",
     "swiper": "^11.2.6",
